Turn on Metrics stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -798,7 +798,7 @@ Resources:
 
   SharedVpcStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
@@ -819,7 +819,7 @@ Resources:
 
   SharedAlbStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
@@ -843,7 +843,7 @@ Resources:
       TimeoutInMinutes: 20
   SharedEcsClusterStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
@@ -860,7 +860,7 @@ Resources:
       TimeoutInMinutes: 20
   SharedEcsAsgStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - !GetAtt Constants.CloudFormationNotificationArn
@@ -887,7 +887,7 @@ Resources:
 
   PrivateSharedMemcachedStack:
     Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
+    Condition: IsStaging # TODO
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
@@ -910,106 +910,106 @@ Resources:
       TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
       TimeoutInMinutes: 40
 
-  # ProvisionedStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: IsStaging
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt Constants.CloudFormationNotificationArn
-  #     Parameters:
-  #       PublishEcrImageTag: !Ref PublishEcrImageTag
-  #       PublishSecretsVersion: !Ref PublishSecretsVersion
-  #       PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
+  ProvisionedStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging # TODO This needs to be a parameter so that app creation can be disabled prior to VPC peering
+    Properties:
+      NotificationARNs:
+        - !GetAtt Constants.CloudFormationNotificationArn
+      Parameters:
+        PublishEcrImageTag: !Ref PublishEcrImageTag
+        PublishSecretsVersion: !Ref PublishSecretsVersion
+        PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
 
-  #       MetricsEcrImageTag: !Ref MetricsEcrImageTag
-  #       MetricsSecretsVersion: !Ref MetricsSecretsVersion
-  #       MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
+        MetricsEcrImageTag: !Ref MetricsEcrImageTag
+        MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
 
-  #       IframelyEcrImageTag: !Ref IframelyEcrImageTag
-  #       IframelySecretsVersion: !Ref IframelySecretsVersion
-  #       IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
+        IframelyEcrImageTag: !Ref IframelyEcrImageTag
+        IframelySecretsVersion: !Ref IframelySecretsVersion
+        IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
 
-  #       PlayEcrImageTag: !Ref PlayEcrImageTag
-  #       PlaySecretsVersion: !Ref PlaySecretsVersion
-  #       PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
+        PlayEcrImageTag: !Ref PlayEcrImageTag
+        PlaySecretsVersion: !Ref PlaySecretsVersion
+        PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
 
-  #       GroveEcrImageTag: !Ref GroveEcrImageTag
-  #       GroveSecretsVersion: !Ref GroveSecretsVersion
-  #       GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
+        GroveEcrImageTag: !Ref GroveEcrImageTag
+        GroveSecretsVersion: !Ref GroveSecretsVersion
+        GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
 
-  #       StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
-  #       StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
-  #       StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
+        StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
+        StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
+        StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
 
-  #       NetworksEcrImageTag: !Ref NetworksEcrImageTag
-  #       NetworksSecretsVersion: !Ref NetworksSecretsVersion
-  #       NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
+        NetworksEcrImageTag: !Ref NetworksEcrImageTag
+        NetworksSecretsVersion: !Ref NetworksSecretsVersion
+        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
 
-  #       DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
-  #       DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
+        DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
+        DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
 
-  #       IdEcrImageTag: !Ref IdEcrImageTag
-  #       IdSecretsVersion: !Ref IdSecretsVersion
-  #       IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
+        IdEcrImageTag: !Ref IdEcrImageTag
+        IdSecretsVersion: !Ref IdSecretsVersion
+        IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
 
-  #       RemixEcrImageTag: !Ref RemixEcrImageTag
-  #       RemixSecretsVersion: !Ref RemixSecretsVersion
-  #       RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        RemixEcrImageTag: !Ref RemixEcrImageTag
+        RemixSecretsVersion: !Ref RemixSecretsVersion
+        RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
 
-  #       ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
-  #       ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
-  #       ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
+        ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
+        ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
+        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
 
-  #       CastleEcrImageTag: !Ref CastleEcrImageTag
-  #       CastleSecretsVersion: !Ref CastleSecretsVersion
-  #       CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
+        CastleEcrImageTag: !Ref CastleEcrImageTag
+        CastleSecretsVersion: !Ref CastleSecretsVersion
+        CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
 
-  #       CmsEcrImageTag: !Ref CmsEcrImageTag
-  #       CmsSecretsVersion: !Ref CmsSecretsVersion
-  #       CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
+        CmsEcrImageTag: !Ref CmsEcrImageTag
+        CmsSecretsVersion: !Ref CmsSecretsVersion
+        CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
 
-  #       AuguryEcrImageTag: !Ref AuguryEcrImageTag
-  #       AugurySecretsVersion: !Ref AugurySecretsVersion
-  #       AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
+        AuguryEcrImageTag: !Ref AuguryEcrImageTag
+        AugurySecretsVersion: !Ref AugurySecretsVersion
+        AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
 
-  #       FeederEcrImageTag: !Ref FeederEcrImageTag
-  #       FeederSecretsVersion: !Ref FeederSecretsVersion
+        FeederEcrImageTag: !Ref FeederEcrImageTag
+        FeederSecretsVersion: !Ref FeederSecretsVersion
 
-  #       TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
-  #       CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
-  #       AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
-  #       AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
-  #       EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
-  #       VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-  #       VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
-  #       VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
-  #       SecretsBase: !GetAtt Constants.SecretsBaseRegion
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #       UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
-  #       UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
-  #       UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
-  #       VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-  #       VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-  #       VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-  #       SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
-  #       SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
-  #       AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
-  #       EcsAsgOutboundTrafficSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.OutboundTrafficSecurityGroupId
-  #       EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
-  #       EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned.yml
-  #     TimeoutInMinutes: 40
+        TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
+        CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
+        EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
+        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcCidrBlock
+        VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
+        SecretsBase: !GetAtt Constants.SecretsBaseRegion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
+        UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        SharedMemcachedEndpointAddress: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
+        AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
+        EcsAsgOutboundTrafficSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.OutboundTrafficSecurityGroupId
+        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned.yml
+      TimeoutInMinutes: 40
 
 Outputs:
   VPCCertificateArn:
