Re-add more new apps

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -103,7 +103,7 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/augury.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
   # CastleStack:
   #   Type: AWS::CloudFormation::Stack
@@ -166,7 +166,7 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/cms.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
   # DovetailRouterStack:
   #   Type: AWS::CloudFormation::Stack
@@ -194,7 +194,7 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-router.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
   # ExchangeStack:
   #   Type: AWS::CloudFormation::Stack
@@ -228,36 +228,36 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/exchange.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
-  # GroveStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref GroveEcrImageTag
-  #       SecretsVersion: !Ref GroveSecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref GroveSharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
-  #     TimeoutInMinutes: 5
+  GroveStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref GroveEcrImageTag
+        SecretsVersion: !Ref GroveSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref GroveSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/grove.yml
+      TimeoutInMinutes: 20
 
   # IdStack:
   #   Type: AWS::CloudFormation::Stack
@@ -287,36 +287,36 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/id.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
-  # IframelyStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref IframelyEcrImageTag
-  #       SecretsVersion: !Ref IframelySecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref IframelySharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/iframely.yml
-  #     TimeoutInMinutes: 5
+  IframelyStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref IframelyEcrImageTag
+        SecretsVersion: !Ref IframelySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref IframelySharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/iframely.yml
+      TimeoutInMinutes: 20
 
   MetricsStack:
     Type: AWS::CloudFormation::Stack
@@ -345,7 +345,7 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
-      TimeoutInMinutes: 5
+      TimeoutInMinutes: 20
 
   # NetworksStack:
   #   Type: AWS::CloudFormation::Stack
@@ -385,68 +385,68 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/networks.yml
-  #     TimeoutInMinutes: 5
-
-  # PlayStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref PlayEcrImageTag
-  #       SecretsVersion: !Ref PlaySecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref PlaySharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
-  #     TimeoutInMinutes: 5
-
-  # PublishStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref PublishEcrImageTag
-  #       SecretsVersion: !Ref PublishSecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref PublishSharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #       UploadSigningUserName: !Ref UploadSigningUserName
-  #       UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
-  #       UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/publish.yml
   #     TimeoutInMinutes: 20
+
+  PlayStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref PlayEcrImageTag
+        SecretsVersion: !Ref PlaySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref PlaySharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
+      TimeoutInMinutes: 20
+
+  PublishStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref PublishEcrImageTag
+        SecretsVersion: !Ref PublishSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref PublishSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        UploadSigningUserName: !Ref UploadSigningUserName
+        UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/publish.yml
+      TimeoutInMinutes: 20
 
   # RemixStack:
   #   Type: AWS::CloudFormation::Stack
@@ -475,33 +475,33 @@ Resources:
   #       - Key: prx:cloudformation:stack-id
   #         Value: !Ref AWS::StackId
   #     TemplateURL: !Sub ${TemplateUrlPrefix}/remix.yml
-  #     TimeoutInMinutes: 5
+  #     TimeoutInMinutes: 20
 
-  # StyleguideStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       AlbFullName: !Ref AlbFullName
-  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-  #       EcsClusterArn: !Ref EcsClusterArn
-  #       VpcId: !Ref VpcId
-  #       SecretsBase: !Ref SecretsBase
-  #       EcrImageTag: !Ref StyleguideEcrImageTag
-  #       SecretsVersion: !Ref StyleguideSecretsVersion
-  #       AlbListenerRulePriorityPrefix: !Ref StyleguideSharedAlbListenerRulePriorityPrefix
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       NotificationsStackName: !Ref NotificationsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
-  #     TimeoutInMinutes: 5
+  StyleguideStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref StyleguideEcrImageTag
+        SecretsVersion: !Ref StyleguideSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref StyleguideSharedAlbListenerRulePriorityPrefix
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/styleguide.yml
+      TimeoutInMinutes: 20
