Update subnet name tags

--- a/stacks/shared-vpc/public-subnets.yml
+++ b/stacks/shared-vpc/public-subnets.yml
@@ -84,7 +84,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicSubnet1 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} public-1 ${ZoneName}
+              - ZoneName: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -115,7 +118,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicSubnet2 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} public-2 ${ZoneName}
+              - ZoneName: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -146,7 +152,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicSubnet3 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} public-3 ${ZoneName}
+              - ZoneName: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
