--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -49,7 +49,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateSubnet1 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} private-1 ${ZoneName}
+              - ZoneName: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -80,7 +83,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateSubnet2 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} private-2 ${ZoneName}
+              - ZoneName: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -111,7 +117,10 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateSubnet3 # TODO better name
+          Value:
+            Fn::Sub:
+              - SharedVpc ${EnvironmentType} private-3 ${ZoneName}
+              - ZoneName: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
