Update name tags

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -244,6 +244,7 @@ Resources:
     Type: Custom::Echo
     Properties:
       ServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+      RootStackName: !Ref AWS::StackName
       SourceBucketName:
         Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       SecretsBaseRegion:
@@ -805,6 +806,7 @@ Resources:
       Parameters:
         AvailabilityZoneSelectorServiceToken: !GetAtt CustomResourcesStack.Outputs.AvailabilityZoneSelectorServiceToken
         EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-vpc
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
       Tags:
@@ -825,6 +827,7 @@ Resources:
         - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+        RootStackName: !GetAtt Constants.RootStackName
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
@@ -867,6 +870,7 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        RootStackName: !GetAtt Constants.RootStackName
         KeyPairName: !Ref AsgKeyPairName
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
@@ -989,6 +993,7 @@ Resources:
         NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        RootStackName: !GetAtt Constants.RootStackName
         UploadSigningUserName: !GetAtt ServerlessRootStack.Outputs.UploadSigningUserName
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
