--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -59,6 +59,7 @@ Mappings:
 Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
@@ -116,7 +117,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-LB-web_ssh # TODO
+          Value: !Sub ${RootStackName}_shared-alb_target_instance
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -167,7 +168,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-LB-web_ssh # TODO
+          Value: !Sub ${RootStackName}_shared-alb_inbound_forwarding
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -251,7 +252,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}
+          Value: !Sub ${RootStackName}_shared
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
