--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -7,11 +7,8 @@ Description: >- # TODO
 Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
-  KeyPairName:
-    Type: AWS::EC2::KeyPair::KeyName
-    Description: >-
-      The EC2 key pair used for instances in the Auto Scaling
-      group (region-specific)
+  RootStackName: { Type: String }
+  KeyPairName: { Type: "AWS::EC2::KeyPair::KeyName" }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcPublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
@@ -89,7 +86,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-ECS-instances-SSH # TODO
+          Value: !Sub ${RootStackName}_shared-asg_instance-ssh
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -112,7 +109,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-ECS-instances-outbound # TODO
+          Value: !Sub ${RootStackName}_shared-asg_instance-outbound
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -289,6 +286,7 @@ Resources:
           PropagateAtLaunch: true
         - Key: Name
           Value: !Sub ECS ASG ${EnvironmentTypeAbbreviation} # TODO  This will be the name of launched EC2 instances
+          Value: !Sub ${RootStackName}_shared-asg
           PropagateAtLaunch: true
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
