--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -5,6 +5,7 @@ Description: Interface VPC endpoints
 
 Parameters:
   EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   PublicSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   PublicSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
@@ -48,7 +49,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-LB-web_ssh # TODO
+          Value: !Sub ${RootStackName}_shared-vpc_ecs-interface-access
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -71,7 +72,7 @@ Resources:
         - Key: Project
           Value: Porter # TODO
         - Key: Name
-          Value: !Sub ${AWS::StackName}-EcsEndpointsSecurityGroup # TODO
+          Value: !Sub ${RootStackName}_shared-vpc_ecs-interface-inbound
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
