--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -5,6 +5,7 @@ Description: Public network ACL
 
 Parameters:
   EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
 
 Resources:
@@ -18,7 +19,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType} # TODO Better name
+          Value: !Sub ${RootStackName}_shared_public
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
