--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -11,6 +11,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: String }
