--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -5,6 +5,7 @@ Description: Private network ACL
 
 Parameters:
   EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: CommaDelimitedList }
@@ -20,7 +21,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub Platform-${EnvironmentType} # TODO Better name
+          Value: !Sub ${RootStackName}_shared_private
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
