--- a/stacks/shared-vpc/private-subnets.yml
+++ b/stacks/shared-vpc/private-subnets.yml
@@ -5,6 +5,7 @@ Description: Private subnets for the VPC
 
 Parameters:
   EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: CommaDelimitedList }
@@ -28,7 +29,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PrivateRouteTable #TODO Better name
+          Value: !Sub ${RootStackName}_shared_private
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
