--- a/stacks/shared-vpc/public-subnets.yml
+++ b/stacks/shared-vpc/public-subnets.yml
@@ -5,6 +5,7 @@ Description: Public subnets for the VPC
 
 Parameters:
   EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: CommaDelimitedList }
@@ -27,7 +28,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-IG #TODO Better name
+          Value: !Sub ${RootStackName}_shared_public
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
@@ -48,7 +49,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-PublicRouteTable #TODO Better name
+          Value: !Sub ${RootStackName}_shared_public
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
